Add file reader, fix tests